<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.publicare.selenium</groupId>
    <artifactId>publicare</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Publicare</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
          <serenity.version>2.0.40</serenity.version> 
       <!--   <serenity.version>1.8.3</serenity.version> -->
        <serenity.maven.version>2.0.27</serenity.maven.version>
        
        <serenity.jbehave.version>1.44.0</serenity.jbehave.version>
        <webdriver.driver>chrome</webdriver.driver>
        <webdriver.chrome.driver>chromedriver.exe</webdriver.chrome.driver> 
     
      <acceptanceSourceDirectory>${basedir}/src/test</acceptanceSourceDirectory>
      <acceptanceOutputDirectory>${basedir}/target/acceptance/test-classes</acceptanceOutputDirectory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-screenplay</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-screenplay-webdriver</artifactId>
            <version>${serenity.version}</version>
        </dependency> -->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-jbehave</artifactId>
            <version>${serenity.jbehave.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>2.53.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>2.53.0</version>
            <scope>test</scope>
        </dependency>
        <!-- <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>2.51.0</version>
            <scope>test</scope>
        </dependency> -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.7</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                   <!--  <skip>true</skip> -->
                   <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                    <includes>
                       <include>${acceptanceSourceDirectory}/java/**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>create-directory</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <echo message="Creating Directory ${acceptanceOutputDirectory}"/>
                                <mkdir dir="${acceptanceOutputDirectory}"/>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>build-helper-maven-plugin</artifactId>
             <version>1.9.1</version>
             <executions>
                 <execution>
                     <id>add-test-sources</id>
                     <phase>pre-integration-test</phase>
                     <goals>
                         <goal>add-test-source</goal>
                     </goals>
                     <configuration>
                         <sources>
                             <source>${acceptanceSourceDirectory}/java</source>
                         </sources>
                     </configuration>
                 </execution>
                 <execution>
                     <id>add-test-resources</id>
                     <phase>pre-integration-test</phase>
                     <goals>
                         <goal>add-test-resource</goal>
                     </goals>
                     <configuration>
                         <resources>
                             <resource>
                                 <directory>${acceptanceSourceDirectory}/java</directory>
                                 <targetPath>${acceptanceOutputDirectory}</targetPath>
                             </resource>
                         </resources>
                     </configuration>
                 </execution>
                 <execution>
                     <id>add-empty-directory</id>
                     <phase>pre-integration-test</phase>
                     <goals>
                         <goal>add-test-resource</goal>
                     </goals>
                     <configuration>
                         <resources>
                             <resource>
                                 <directory>${acceptanceSourceDirectory}/java</directory>
                                 <targetPath>${acceptanceOutputDirectory}</targetPath>
                                 <excludes>
                                     <exclude>**/*</exclude>
                                 </excludes>
                             </resource>
                         </resources>
                     </configuration>
                 </execution>
             </executions>
         </plugin>
         
         <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
             <version>2.8</version>
             <configuration>
                 <testClassesDirectory>${acceptanceOutputDirectory}
                 </testClassesDirectory>
                 <reportsDirectory>${acceptanceOutputDirectory}/failsafe-reports
                 </reportsDirectory>
                 <test>**/*.java</test>
                 <additionalClasspathElements>
                     <additionalClasspathElement>${acceptanceSourceDirectory}/resources
                     </additionalClasspathElement>
                 </additionalClasspathElements>
             </configuration>
             <executions>
                 <execution>
                     <goals>
                         <goal>integration-test</goal>
                     </goals>
                 </execution>
             </executions>
         </plugin>
            <!-- <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*TestSuite.java</include>
                        <include>**/Test*.java</include>
                        <include>**/When*.java</include>
                    </includes>
                    <argLine>-Xmx512m</argLine>
                    <systemPropertyVariables>
                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
                        <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
                    </systemPropertyVariables>
                    <additionalClasspathElements>
                                <additionalClasspathElement>${acceptanceSourceDirectory}/resources
                                </additionalClasspathElement>
                    </additionalClasspathElements>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin> -->
              <plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
        		<version>3.8.0</version>
        		<configuration>
          			<source>1.8</source>
          			<target>1.8</target>
        		</configuration>
        		<executions>
                    <execution>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <compilerArguments>
                                <d>${acceptanceOutputDirectory}</d>
                            </compilerArguments>
                        </configuration>
                    </execution>
                </executions>
      		</plugin> 
      		
      		<!-- <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <executions>
                    <execution>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <compilerArguments>
                                <d>${acceptanceOutputDirectory}</d>
                            </compilerArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin> -->
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.maven.version}</version>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
                 <dependencies>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-core</artifactId>
                        <version>${serenity.version}</version>
                    </dependency>
                  </dependencies> 
            </plugin>
        </plugins>
    </build>
</project>
